--- a/_config_dev.yml
+++ b/_config_dev.yml
@@ -1,26 +1,22 @@
 # Site settings
-name: Brittany Chiang
-title: Brittany Chiang | Front End Software Engineer
-description: Design-minded front-end software engineer focused on building beautiful interfaces and experiences
-url: https://bchiang7.github.io/
+name: Khushi Sabarad
+title: Khushi Sabarad | Data Engineer, DevOps
+description: Software engineer passionate about building and exploring cloud services for data engineering projects.
+url: https://khushi-sabarad.github.io/
 baseurl: ''
-email: brittany.chiang@gmail.com
-cover: https://bchiang7.github.io/img/og.png
-logo: https://bchiang7.github.io/img/emojis/technologist.png
-resume: https://bchiang7.github.io/resume.pdf
+email: khushi.sabarad@gmail.com
+cover: https://khushi-sabarad.github.io/img/og.png
+logo: https://khushi-sabarad.github.io/img/emojis/technologist.png
+resume: https://khushi-sabarad.github.io/resume.pdf
 social:
   - title: email
-    url: mailto:brittany.chiang@gmail.com
-  - title: twitter
-    url: https://twitter.com/bchiang7
-  - title: instagram
-    url: https://instagram.com/bchiang7
-  - title: codepen
-    url: http://codepen.io/bchiang7
+    url: mailto:khushi.sabarad@gmail.com
   - title: github
-    url: https://github.com/bchiang7
+    url: https://github.com/khushi-sabarad
   - title: linkedin
-    url: https://www.linkedin.com/in/bchiang7
+    url: https://www.linkedin.com/in/khushi-sabarad
+  - title: medium
+    url: https://medium.com/@khushi.sabarad
 
 # Build settings
 markdown: kramdown
