removed featured projects, changed versions

--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,4 +1,4 @@
 - company: d'Alchemy, Bangalore
   url: https://dalchemy.com/
   time:  January 2023 - February 2024
-  position: Associate Software Engineer / Data Engineer
+  position: Associate Software Engineer
